--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Fitskills</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/bundle.css">
+</head>
+<body class="container">
+    <header class="main-header">
+        <nav class="main-nav">
+            <div class="header-logo">
+                <a href="#"><img src="img/ninjaOne.svg" alt=""></a>
+                <span class="logo-title">Fitskills</span>
+            <div>
+            <ul class="list  main-nav__list">
+                <li class="main-nav__item">О НАС</li>
+                <li class="main-nav__item">УСЛУГИ</li>
+                <li class="main-nav__item">МАГАЗИН</li>
+                <li class="main-nav__item">БЛОГ</li>
+                <li class="main-nav__item">КОНТАКТЫ</li>
+            </ul>
+        </nav>
+        <h1 class="header-title">ТВОЙ ГИД В<br> ФУНКЦИОНАЛЬНОМ ФИТНЕСЕ</h1>
+    </header>
+
+    <main>
+        
+    </main>
+
+    <footer>
+
+    </footer>
+</body>
+</html>
