--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
                 <span class="logo-title">Fitskills</span>
             <div>
             <ul class="list  main-nav__list">
-                <li class="main-nav__item">О НАС</li>
-                <li class="main-nav__item">УСЛУГИ</li>
+                <li class="main-nav__item">СТАРТ</li>
+                <li class="main-nav__item">ПРОГРАММЫ</li>
                 <li class="main-nav__item">МАГАЗИН</li>
                 <li class="main-nav__item">БЛОГ</li>
                 <li class="main-nav__item">КОНТАКТЫ</li>
             </ul>
         </nav>
         <h1 class="header-title">ТВОЙ ГИД В<br> ФУНКЦИОНАЛЬНОМ ФИТНЕСЕ</h1>
+        <button class="btn">PUSH ME!</button>
     </header>
 
     <main>
@@ -33,5 +34,7 @@
     <footer>
 
     </footer>
+
+    <script src="js/bundle.js"></script>
 </body>
 </html>
